CHATS_SIT/force-app/main/default/objects/Referral_Object_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBMS_Object_API_Name__c</fullName>
        <label>CBMS Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHATS_Object_API_Name__c</fullName>
        <label>CHATS Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Referral Object Mapping</label>
    <pluralLabel>Referral Object Mappings</pluralLabel>
</CustomObject>